--- a/create_table.html
+++ b/create_table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-<style type="text/css">
+<style>
         td{
             border:1px solid red;
         }
@@ -32,12 +32,12 @@
         drawTable(row,col);
 
     }
-    function drawTable(row, col){
+    function drawTable(row,col){
         var table = document.createElement('table');
-        for(var i = 1; i <= row; i++){
+        for(var i=1; i<=row; i++){
             var tr = document.createElement('tr');
 
-              for(var j = 1; j <= col; j++){
+              for(var j = 1; j <=col; j++){
                   var td = document.createElement('td');
                   text = document.createTextNode('Row:'+i+ 'Col:' +j);
                   td.appendChild(text);
@@ -45,7 +45,7 @@
               }
             table.appendChild(tr);
         }
-        document.getElementsById('tableContainer').appendChild(table);
+        document.getElementById('tableContainer').appendChild(table);
     }
 </script>
 
